# mdbook-presentation-preprocessor

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  package.json  presentationHIder.ts  presentationHider.scss  presentationHider.ts  presentationTimer.ts  tsDocConfig.json  tsconfig.json
api_docs/api/: presentationHider.md
api_docs/api/presentationhider/: presentationmodehider.md
docs/: chapter_1.html  chapter_2.html  index.html  print.html  searchindex.js  searchindex.json
example/: book.toml
example/src/: SUMMARY.md  chapter_1.md  chapter_2.md
src/: main.rs  presentationHider.css  presentationHider.js
