[package]
name = "mdbook-presentation-preprocessor"
version = "0.3.1"
authors = ["Robert Masen <r@robertmasen.pizza>"]
description = "A preprocessor for utilizing an MDBook as slides for a presentation."
repository = "https://github.com/FreeMasen/mdbook-presentation-preprocessor"
keywords = ["mdbook", "gitbook", "rustbook", "markdown", "preprocessor"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
mdbook = { version = "0.4", features = ["search"], default-features = false }
serde_json = "1"
docopt = "1"
serde_derive = "1"
serde = "1"
log = "0.4"
env_logger = "0.6"
chrono = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
